<resources>
    <string name="app_name">EmTrack</string>
    <string name="title_live">Live</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_record">Record</string>
    <string name="acc_x_raw">acc. x: %1$.2f</string>
    <string name="acc_y_raw">acc. y: %1$.2f</string>
    <string name="acc_z_raw">acc. z: %1$.2f</string>
    <string name="gyro_x_raw">gyro. x: %1$.2f</string>
    <string name="gyro_y_raw">gyro. y: %1$.2f</string>
    <string name="gyro_z_raw">gyro. z: %1$.2f</string>
    <string name="mag_x_raw">mag. x: %1$.2f</string>
    <string name="mag_y_raw">mag. y: %1$.2f</string>
    <string name="mag_z_raw">mag. z: %1$.2f</string>
    <string name="error_no_sensor">No sensor</string>
    <string name="record_btn_start">Start Recording</string>
    <string name="record_btn_stop">Stop Recording</string>
    <string name="movement_type">Choose movement type:</string>
    <string name="status_msg">Status: Not started</string>
    <string name="rec_windows">Windows recorded: %d</string>

    <string name="live_state">Current state: %1$s</string>
    <string name="live_state_waiting">Current state: None</string>
    <string name="live_state_accuracy">Confidence: %1$.1f%%</string>
    <string name="live_state_accuracy_waiting">Confidence: None</string>
    <string name="live_status">Status: %1$s</string>
    <string name="status_online">Online</string>
    <string name="status_error">Malfunction</string>
    <string name="live_status_waiting">Status: Waiting for data</string>

    <string name="your_em">Emission:</string>
    <string name="em_value">%1$.1f</string>
    <string name="em_unit">gCO2</string>

    <string name="timePerModeTitle">Time per transport mode</string>
    <string name="timePerEmModeTitle">Time per emissive transport mode</string>
    <string name="emPerModeTitle">Emissions per transport mode</string>
    <string name="total_time">Total time logged: %02d days %02d hours %02d min</string>
    <string name="emStatsTitle">Your Stats</string>



    <string-array name="movement_dropdown">
        <item>Still</item>
        <item>Walking</item>
        <item>Run</item>
        <item>Bike</item>
        <item>Car</item>
        <item>Bus</item>
        <item>Train</item>
        <item>Subway</item>
    </string-array>


</resources>