<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="fill_parent"
        android:layout_marginBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.home.HomeFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center"
                android:id="@+id/ll">

                <TextView
                    android:id="@+id/statsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:text="@string/emStatsTitle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <LinearLayout
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/card1"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:focusable="true"
                        app:cardCornerRadius="20dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_gravity="center_vertical">

                            <TextView
                                android:id="@+id/text_your_em"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:textSize="20sp"
                                android:textAlignment="center"
                                android:text="@string/your_em"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/text_dashboard"/>
                            <TextView
                                android:id="@+id/text_num_CO2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:textSize="50sp"
                                android:text="@string/em_value"
                                android:textAlignment="center"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/text_your_em"/>

                            <TextView
                                android:id="@+id/text_unit_CO2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:textSize="20sp"
                                android:textAlignment="center"
                                android:text="@string/em_unit"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/text_num_CO2"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/card2"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_margin="10dp"
                        android:focusable="true"
                        app:cardCornerRadius="20dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp">

                            <TextView
                                android:id="@+id/emPerModeTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:textAlignment="center"
                                android:text="@string/emPerModeTitle"
                                android:textSize="20sp"
                                android:textStyle="normal" />

                            <com.github.mikephil.charting.charts.PieChart
                                android:id="@+id/pieChartEm"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/card3"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_margin="10dp"
                        android:focusable="true"
                        app:cardCornerRadius="20dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp">

                            <TextView
                                android:id="@+id/timePerModeTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:textAlignment="center"
                                android:text="@string/timePerModeTitle"
                                android:textSize="20sp"
                                android:textStyle="normal" />

                            <com.github.mikephil.charting.charts.PieChart
                                android:id="@+id/pieChartFull"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/card4"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_margin="10dp"
                        android:focusable="true"
                        app:cardCornerRadius="20dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp">

                            <TextView
                                android:id="@+id/timePerEmModeTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:textAlignment="center"
                                android:text="@string/timePerEmModeTitle"
                                android:textSize="20sp"
                                android:textStyle="normal" />

                            <com.github.mikephil.charting.charts.PieChart
                                android:id="@+id/pieChartEmMode"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <TextView
                    android:id="@+id/statsTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:text="@string/total_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>